feature_water_swagger_aded_adaptation_to_auth
