# controllers/waterControler.js
@@ -1,22 +1,29 @@
+import HttpError from "../helpers/HttpError.js";
 import { errorHelper } from "../helpers/errorHelper.js";
 import { getDaysInMonth } from "../helpers/getDaysInMonth.js";
 import waterModel from "../models/water.js";
 
 const addWaterServing = async (req, res, next) => {
   try {
-    const response = await waterModel.create({ ...req.body });
+    const response = await waterModel.create({
+      ...req.body,
+      owner_id: req.user.uid,
+    });
     res.send({ data: response });
   } catch (error) {
     next(errorHelper(error));
   }
 };
-// ID користувача в req.body з'являється в мідлварі для перевірки токена
+
 const editWaterServing = async (req, res, next) => {
   try {
     const oldData = await waterModel.findOne({
-      _id: req.params._id,
-      owner_id: req.body.owner_id,
+      _id: req.params.id,
+      owner_id: req.user.uid,
     });
+    if (oldData === null) {
+      return next(HttpError(404, "Not found in database"));
+    }
     if (oldData.amount === req.body.amount) {
       return res.send({ data: oldData });
     } else {
@@ -37,12 +44,12 @@ const editWaterServing = async (req, res, next) => {
 const deleteWaterServing = async (req, res, next) => {
   try {
     const response = await waterModel.findOneAndDelete({
-      _id: req.params._id,
-      owner_id: req.body.owner_id,
+      _id: req.params.id,
+      owner_id: req.user.uid,
     });
-    console.log(response);
+
     if (response === null) {
-      return res.status(404).json({ message: "Not found" });
+      return next(HttpError(404, "Not found in database"));
     }
     res.status(204).send();
   } catch (error) {
@@ -52,10 +59,11 @@ const deleteWaterServing = async (req, res, next) => {
 
 const waterConsumptionByDay = async (req, res, next) => {
   try {
-    const { owner_id, year, month, day } = req.params;
+    const { year, month, day } = req.params;
+    const owner_id = req.user.uid;
     const response = await waterModel.find({ owner_id, year, month, day });
     if (response.length === 0) {
-      return res.status(404).json({ message: "No data for this queries" });
+      return next(HttpError(404, "No data for this queries"));
     }
     res.send({ data: response });
   } catch (error) {
@@ -65,7 +73,8 @@ const waterConsumptionByDay = async (req, res, next) => {
 
 const waterConsumptionByMonth = async (req, res, next) => {
   try {
-    const { owner_id, year, month } = req.params;
+    const { year, month } = req.params;
+    const owner_id = req.user.uid;
     const data = await waterModel.find({ owner_id, year, month });
     const days = getDaysInMonth(year, month);
     const response = { days };
